k8s/base/runner-api/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qslate
