k8s/base/runner-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: runner-svc
  labels:
    app: runner
spec:
  selector:
    app: runner
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
